--- a/2_strategy.ipynb
+++ b/2_strategy.ipynb
@@ -35,28 +35,30 @@
     "요소 | 설명\n",
     "---|---\n",
     "name | Strategy\n",
-    "problem | 알고리즘 서로 다른 버전이 존재해서, if문으로 처리해야 하거나 중복이 발생.\n",
+    "problem | 알고리즘 서로 다른 버전이 존재해서, 중복으로 존재하거나 if문으로 처리해야 함.\n",
     "solution | 중복을 공통화, 실행시점에 맞는 알고리즘을 호출.\n",
-    "consequence | OCP 수정할 경우 Strategy를 추가하고 나머지는 변경하지 않아도 된다."
+    "consequence | OCP (Open Closed Principle). 수정할 경우 Strategy를 추가하고 나머지는 변경하지 않아도 된다."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
     "* 프로그래밍 예제\n",
     "    * 'Duck' (HFDP Ch1)\n",
-    "    * 'Sort'\n",
-    "    * exercise (by Sat to git: 50% for 1 day late deadline) \n",
+    "    * 정렬 Sort\n",
+    "    * 과제\n",
     "        * case extension - 거북이를 무게에 따라 정렬\n",
-    "        * new case - "
+    "        * new case - 새로운 사례를 찾아서 함.\n",
+    "        * 제출일자\n",
+    "            * 토요일까지 github에 제출\n",
+    "            * 늦으면 하루마다 50% 점수 감점.\n",
+    "            * 과제는 필수로서, 과제의 20% 이상 미제출하지 않는다!"
    ]
   },
   {
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -205,15 +207,12 @@
     "%%plantuml\n",
     "\n",
     "@startuml\n",
-    "\n",
     "Duck <|-- MallardDuck\n",
     "Duck <|-- ReadHeadDuck\n",
     "Duck <|-- RubberDuck\n",
     "Duck <|-- DecoyDuck\n",
-    "\n",
     "Flyable <|.. MallardDuck\n",
     "Flyable <|.. RedHeadDuck\n",
-    "\n",
     "Quackable <|.. MallardDuck\n",
     "Quackable <|.. ReadHeadDuck\n",
     "Quackable <|.. RubberDuck\n",
@@ -223,15 +222,12 @@
     "  +swim()\n",
     "  +display()\n",
     "}\n",
-    "\n",
     "Interface Flyable {\n",
     "    +fly()\n",
     "}\n",
-    "\n",
     "Interface Quackable {\n",
     "    +quack()\n",
     "}\n",
-    "\n",
     "@enduml"
    ]
   },
@@ -469,7 +465,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -564,8 +563,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* 컴파일 및 실행은 프로젝트 디렉토리에서 한다.\n",
+    "\n",
+    "명령어 | 설명\n",
+    "-----|-----\n",
+    "d | 빌드 디렉토리, 패키지 및 .class가 저장된다.\n",
+    "sourcepath | 패키지가 저장된 디렉토리. src/\n",
+    "cp 또는 classpath | classpath 디렉토리. .jar는 하나씩 써준다."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -576,10 +592,10 @@
     {
      "data": {
       "text/plain": [
-       "u'/Users/media/Dropbox/Me/toCopy/smu'"
+       "u'/home/jsl/Code/git/bb/sd'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,14 +630,14 @@
    "source": [
     "### S.4.2 정렬\n",
     "\n",
-    "* 무엇이 문제인가? 중복되는가? 재사용할 수 있는가? 변하는 부분이 어떤 부분인가?\n",
-    "    * 문제는 sort가 중복 -> v0에서 재현\n",
+    "* 버전 v0은 패턴을 사용하지 않는 경우의 프로그램\n",
+    "    * 무엇이 문제인가? 중복되는가? 재사용할 수 있는가? 기능을 추가하면 수정해야 하는 부분이 있는가?\n",
     "\n",
     "버전 | 설명\n",
     "-----|-----\n",
     "v0 | 정렬 알고리즘이 중복. 정수, 문자에 따라 비교 방식만 다르고 나머지 중복 \n",
-    "v1 | Comparable\n",
-    "v2 | Compararator\n",
+    "v1 | Comparable. Template 패턴 적용.\n",
+    "v2 | Compararator. Strategy 패턴 적용.\n",
     "\n"
    ]
   },
@@ -757,7 +773,7 @@
    },
    "source": [
     "* Integer객체는 부등호로 비교한다.\n",
-    "* String을 비교하는 것"
+    "* String을 비교하는 경우에는 compareTo()를 사용한다."
    ]
   },
   {
@@ -996,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1005,17 +1021,19 @@
    },
    "outputs": [
     {
-     "data": {
-      "image/svg+xml": [
-       "<svg height=\"320px\" style=\"width:276px;height:320px;\" version=\"1.1\" viewBox=\"0 0 276 320\" width=\"276px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs><filter height=\"300%\" id=\"f1\" width=\"300%\" x=\"-1\" y=\"-1\"><feGaussianBlur result=\"blurOut\" stdDeviation=\"2.0\"/><feColorMatrix in=\"blurOut\" result=\"blurOut2\" type=\"matrix\" values=\"0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 .4 0\"/><feOffset dx=\"4.0\" dy=\"4.0\" in=\"blurOut2\" result=\"blurOut3\"/><feBlend in=\"SourceGraphic\" in2=\"blurOut3\" mode=\"normal\"/></filter></defs><g><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"60.9551\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"157\" x=\"110\" y=\"8\"/><ellipse cx=\"149.3\" cy=\"24\" fill=\"#B4A7E5\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M145.2277,19.7651 L145.2277,17.6069 L152.6071,17.6069 L152.6071,19.7651 L150.1418,19.7651 L150.1418,27.8418 L152.6071,27.8418 L152.6071,30 L145.2277,30 L145.2277,27.8418 L147.6931,27.8418 L147.6931,19.7651 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" font-style=\"italic\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"71\" x=\"168.7\" y=\"28.5352\">Comparable</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"111\" x2=\"266\" y1=\"40\" y2=\"40\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"111\" x2=\"266\" y1=\"48\" y2=\"48\"/><ellipse cx=\"121\" cy=\"59.9775\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"131\" x=\"130\" y=\"62.6348\">compareTo(Object o):int</text><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"73.9102\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"157\" x=\"110\" y=\"129\"/><ellipse cx=\"165.25\" cy=\"145\" fill=\"#ADD1B2\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M168.2231,150.6431 Q167.6421,150.9419 167.0029,151.0913 Q166.3638,151.2407 165.6582,151.2407 Q163.1514,151.2407 161.8315,149.5889 Q160.5117,147.937 160.5117,144.8159 Q160.5117,141.6865 161.8315,140.0347 Q163.1514,138.3828 165.6582,138.3828 Q166.3638,138.3828 167.0112,138.5322 Q167.6587,138.6816 168.2231,138.9805 L168.2231,141.7031 Q167.5923,141.1221 166.9988,140.8523 Q166.4053,140.5825 165.7744,140.5825 Q164.4297,140.5825 163.7449,141.6492 Q163.0601,142.7158 163.0601,144.8159 Q163.0601,146.9077 163.7449,147.9744 Q164.4297,149.041 165.7744,149.041 Q166.4053,149.041 166.9988,148.7712 Q167.5923,148.5015 168.2231,147.9204 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"38\" x=\"185.75\" y=\"149.5352\">Weight</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"111\" x2=\"266\" y1=\"161\" y2=\"161\"/><rect fill=\"none\" height=\"6\" style=\"stroke: #C82930; stroke-width: 1.0;\" width=\"6\" x=\"118\" y=\"169.9775\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"36\" x=\"130\" y=\"175.6348\">kilo:int</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"111\" x2=\"266\" y1=\"181.9551\" y2=\"181.9551\"/><ellipse cx=\"121\" cy=\"193.9326\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"131\" x=\"130\" y=\"196.5898\">compareTo(Object o):int</text><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"48\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"66\" x=\"81.5\" y=\"263\"/><ellipse cx=\"96.5\" cy=\"279\" fill=\"#ADD1B2\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M99.4731,284.6431 Q98.8921,284.9419 98.2529,285.0913 Q97.6138,285.2407 96.9082,285.2407 Q94.4014,285.2407 93.0815,283.5889 Q91.7617,281.937 91.7617,278.8159 Q91.7617,275.6865 93.0815,274.0347 Q94.4014,272.3828 96.9082,272.3828 Q97.6138,272.3828 98.2612,272.5322 Q98.9087,272.6816 99.4731,272.9805 L99.4731,275.7031 Q98.8423,275.1221 98.2488,274.8523 Q97.6553,274.5825 97.0244,274.5825 Q95.6797,274.5825 94.9949,275.6492 Q94.3101,276.7158 94.3101,278.8159 Q94.3101,280.9077 94.9949,281.9744 Q95.6797,283.041 97.0244,283.041 Q97.6553,283.041 98.2488,282.7712 Q98.8423,282.5015 99.4731,281.9204 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"34\" x=\"110.5\" y=\"283.5352\">Sorter</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"82.5\" x2=\"146.5\" y1=\"295\" y2=\"295\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"82.5\" x2=\"146.5\" y1=\"303\" y2=\"303\"/><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"48\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"69\" x=\"6\" y=\"142\"/><ellipse cx=\"21\" cy=\"158\" fill=\"#ADD1B2\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M23.9731,163.6431 Q23.3921,163.9419 22.7529,164.0913 Q22.1138,164.2407 21.4082,164.2407 Q18.9014,164.2407 17.5815,162.5889 Q16.2617,160.937 16.2617,157.8159 Q16.2617,154.6865 17.5815,153.0347 Q18.9014,151.3828 21.4082,151.3828 Q22.1138,151.3828 22.7612,151.5322 Q23.4087,151.6816 23.9731,151.9805 L23.9731,154.7031 Q23.3423,154.1221 22.7488,153.8523 Q22.1553,153.5825 21.5244,153.5825 Q20.1797,153.5825 19.4949,154.6492 Q18.8101,155.7158 18.8101,157.8159 Q18.8101,159.9077 19.4949,160.9744 Q20.1797,162.041 21.5244,162.041 Q22.1553,162.041 22.7488,161.7712 Q23.3423,161.5015 23.9731,160.9204 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"37\" x=\"35\" y=\"162.5352\">Arrays</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"7\" x2=\"74\" y1=\"174\" y2=\"174\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"7\" x2=\"74\" y1=\"182\" y2=\"182\"/><path d=\"M188.5,89.505 C188.5,102.621 188.5,116.513 188.5,128.755 \" fill=\"none\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><polygon fill=\"none\" points=\"181.5,89.242,188.5,69.242,195.5,89.242,181.5,89.242\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M163.223,207.648 C151.766,226.0724 138.636,247.1863 128.896,262.8505 \" fill=\"none\" style=\"stroke: #A80036; stroke-width: 1.0; stroke-dasharray: 7.0,7.0;\"/><polygon fill=\"#A80036\" points=\"166.097,203.027,157.9477,208.5578,163.4568,207.2731,164.7415,212.7821,166.097,203.027\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M57.6176,194.527 C70.4903,215.2276 87.9302,243.2729 100.0928,262.8317 \" fill=\"none\" style=\"stroke: #A80036; stroke-width: 1.0; stroke-dasharray: 7.0,7.0;\"/><polygon fill=\"#A80036\" points=\"54.9436,190.227,56.2989,199.9822,57.5837,194.4732,63.0927,195.758,54.9436,190.227\" style=\"stroke: #A80036; stroke-width: 1.0;\"/></g></svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "CalledProcessError",
+     "evalue": "Command '['java', '-splash:no', '-jar', '/usr/local/bin/plantuml.jar', '-tsvg', 'tmp.uml']' returned non-zero exit status -6",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-02ee45cdb5d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_cell_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mu'plantuml'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mu''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mu'@startuml\\ninterface Comparable {\\n    +compareTo(Object o):int\\n}\\nclass Weight {\\n    -kilo:int\\n    +compareTo(Object o):int\\n}\\nComparable <|-- Weight\\nSorter .right.> Weight\\nSorter .up.> Arrays\\n@enduml'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/IPython/core/interactiveshell.pyc\u001b[0m in \u001b[0;36mrun_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2113\u001b[0m             \u001b[0mmagic_arg_s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvar_expand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_depth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2114\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuiltin_trap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2115\u001b[0;31m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmagic_arg_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2116\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2117\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/iplantuml/__init__.pyc\u001b[0m in \u001b[0;36mplantuml\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m         \u001b[0msvg_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplantuml_exec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muml_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mSVG\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msvg_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/iplantuml/__init__.pyc\u001b[0m in \u001b[0;36mplantuml_exec\u001b[0;34m(*file_names, **kwargs)\u001b[0m\n\u001b[1;32m     22\u001b[0m            \"-tsvg\"] + list(file_names)\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m     \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshell\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSTDOUT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".svg\"\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfile_names\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python2.7/subprocess.pyc\u001b[0m in \u001b[0;36mcheck_call\u001b[0;34m(*popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    539\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcmd\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    540\u001b[0m             \u001b[0mcmd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpopenargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 541\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mCalledProcessError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mretcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcmd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    542\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    543\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command '['java', '-splash:no', '-jar', '/usr/local/bin/plantuml.jar', '-tsvg', 'tmp.uml']' returned non-zero exit status -6"
+     ]
     }
    ],
    "source": [
@@ -1029,7 +1047,7 @@
     "    +compareTo(Object o):int\n",
     "}\n",
     "Comparable <|-- Weight\n",
-    "Sorter .up.> Weight\n",
+    "Sorter .right.> Weight\n",
     "Sorter .up.> Arrays\n",
     "@enduml"
    ]
@@ -1449,7 +1467,7 @@
     "* 일자를 정렬하는 DataComparator를 구현\n",
     "* 문자를 역정렬하는 ReverseComparator를 구현\n",
     "\n",
-    "### 1-4 drjava 인터랙션을 이용해서 결과를 보기\n",
+    "### 1-4 DrJava 인터랙션을 이용해서 결과를 보기\n",
     "\n",
     "* 거북이를 정렬"
    ]
@@ -1458,14 +1476,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Java 9",
-   "language": "java",
-   "name": "java"
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
   },
   "language_info": {
-   "file_extension": ".class",
-   "mimetype": "application/java-vm",
-   "name": "java"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
