--- a/1_hello_goodsw.ipynb
+++ b/1_hello_goodsw.ipynb
@@ -357,7 +357,7 @@
     }
    },
    "source": [
-    "### 구현  warming up\n",
+    "### 구현  get started\n",
     "\n",
     "* Turtle은 \"Turtle Graphics with Java\" 검색해서 library 설치\n"
    ]
