--- a/1_intro_dp.ipynb
+++ b/1_intro_dp.ipynb
@@ -51,12 +51,16 @@
    "source": [
     "## DP.3 종류\n",
     "\n",
-    "* 디자인패턴은 여러 종류가 있다.\n",
-    "    * 설계 디자인패턴\n",
-    "    * 엔터프라이즈 디자인패턴\n",
-    "    * 앤티 디자인패턴\n",
-    "    * 구현 디자인패턴\n",
-    "    * 특정 영역에 쓰이는 디자인패턴 (예: 웹 디자인)"
+    "* 패턴은 여러 종류가 있다.\n",
+    "\n",
+    "구분 | 설명\n",
+    "-----|-----\n",
+    "설계 디자인패턴 | GoF\n",
+    "엔터프라이즈 패턴 | Hohpe, G &  Woolf, B., 2003, 65가지 패턴\n",
+    "분석 패턴 | Fowler, M., 1996\n",
+    "앤티 패턴 | Koenig, 1995\n",
+    "구현 패턴 | Beck, K. 2007\n",
+    "특정 영역에 쓰이는 패턴 | 예: 웹 디자인"
    ]
   },
   {
