--- a/2_strategy.ipynb
+++ b/2_strategy.ipynb
@@ -54,8 +54,9 @@
     "    * 'Duck' (HFDP Ch1)\n",
     "    * 정렬 Sort\n",
     "    * 과제\n",
-    "        * case extension - 'Turtle'를 무게에 따라 정렬\n",
-    "        * new case\n",
+    "        * case extension\n",
+    "            * 'Turtle'를 무게에 따라 정렬\n",
+    "            * 생년월일에 따라 정렬\n",
     "        * 제출일자\n",
     "            * 실습 시간에 제출, 늦으면 매 하루 50% 감점.\n",
     "            * 과제는 필수로서, 과제의 20% 이상 미제출하지 않는다!"
@@ -189,7 +190,7 @@
     "구분 | 절차\n",
     "----|----\n",
     "혼밥 | - 혼자 먹고 싶은 메뉴 정하고<br>- 핸드폰을 보면서 혼밥<br>- 혼자 계산\n",
-    "같이 식사 | - 식사할 사람과 약속을 정하고<br>- 메뉴를 같이 정하고<br>- 얘기<br>- 계산 나누고"
+    "같이 식사 | - 식사할 사람과 약속을 정하고<br>- 메뉴를 같이 정하고<br>- 대화<br>- 계산 나누고"
    ]
   },
   {
@@ -201,7 +202,8 @@
    },
    "source": [
     "* 패턴을 적용하기 전:\n",
-    "    * if문을 사용하거나, 클래스로 식사하는 방법을 별도로 구성한다."
+    "    * if문을 사용하거나,\n",
+    "    * 클래스로 식사하는 방법을 나누어 구현한다."
    ]
   },
   {
@@ -249,8 +251,10 @@
     }
    },
    "source": [
-    "* 상속을 사용하여, 식사하는 방법을 구현한다.\n",
-    "    * 나는 항상 혼밥을 하지 않는다. 내가 혼밥을 하지 않는 경우, 구현은 중복된다."
+    "* '상속'을 사용하여, 식사하는 방법을 구현한다.\n",
+    "    * 다른 알고리즘을 구현할 수 있었지만, 새로운 문제가 있다.\n",
+    "    * 'Me'가 항상 'eatOutAlone()' 하지 않을 수 있다.\n",
+    "    * 'You'가 항상 'eatTogether()'하지 않는 않을 수 있다."
    ]
   },
   {
@@ -304,8 +308,8 @@
     }
    },
    "source": [
-    "* 식사하는 방법을 상속을 사용하여 구현하고,\n",
-    "* 실행시점에 내가 식사하는 방법을 결정한다."
+    "* 식사하는 방법을 인터페이스로 분리하여 구현하고,\n",
+    "* 실행시점에 'Me'가 식사하는 방법을 결정한다."
    ]
   },
   {
@@ -1008,7 +1012,13 @@
     }
    },
    "source": [
-    "* Integer객체는 부등호로 비교한다.\n",
+    "* Integer객체는 부등호로 비교할 수 있다. 객체이므로 compareTo()를 사용할 수 있다.\n",
+    "    ```\n",
+    "    Integer i1 = new Integer(\"20\");\n",
+    "    Integer i2 = new Integer(\"10\");\n",
+    "    int res =  i1.compareTo(i2);\n",
+    "    ```\n",
+    "\n",
     "* String을 비교하는 경우에는 compareTo()를 사용한다."
    ]
   },
