--- a/2_strategy.ipynb
+++ b/2_strategy.ipynb
@@ -14,7 +14,7 @@
     "## S.1 소개\n",
     "\n",
     "* Strategy 패턴은 Behavioral Design Pattern\n",
-    "* Policy Pattern이라고 한다. 여러 정책이 존재하고, 경우에 따라 적용되는 정책을 적용한다.\n",
+    "* Policy Pattern이라고 한다. 여러 정책이 존재하고, 상황에 따라 맞는 정책을 적용한다.\n",
     "* 알고리즘이 서로 다르고, 실행시점에 맞는 알고리즘을 선택하여 적용\n",
     "    * 조리법이 서로 다른 경우,\n",
     "    * 파일의 압축 방법이 서로 다른 경우,\n",
@@ -36,7 +36,7 @@
     "요소 | 설명\n",
     "---|---\n",
     "name | Strategy\n",
-    "problem | 알고리즘 서로 다른 버전이 존재해서, 중복으로 존재하거나 if문으로 처리해야 함.\n",
+    "problem | 알고리즘의 서로 다른 버전이 존재해서, 중복으로 존재하거나 if문으로 처리해야 함.\n",
     "solution | 중복을 공통화, 실행시점에 맞는 알고리즘을 호출.\n",
     "consequence | OCP (Open Closed Principle). 수정할 경우 Strategy를 추가하고 나머지는 변경하지 않아도 된다."
    ]
@@ -88,11 +88,10 @@
    "source": [
     "## S.3 설계\n",
     "\n",
-    "\n",
     "클래스 | 설명\n",
     "-----|-----\n",
     "Context | 적용할 Strategy를 결정. 속성으로 사용할 Strategy를 가진다.\n",
-    "Strategy | 런타임에 사용하는 Strategy로서 구현은 하위 Strategy1에 위임한다.\n",
+    "Strategy | 런타임에 사용하는 Strategy로서 구현은 하위 Strategy$_n$에 위임한다.\n",
     "Strategy1 | 실행시점에 적용하는 Strategy를 가진다.\n",
     "\n",
     "* 서로 다른 알고리즘을 실행시점에 적용하기 위해:\n",
@@ -101,7 +100,11 @@
     "        * 상위 Strategy는 인터페이스 또는 클래스로 구현할 수 있다.\n",
     "        * execute()함수의 명칭은 다른 이름을 사용할 수 있다.\n",
     "    * 적용할 알고리즘은 Context에서 strategy에서 결정된다.\n",
-    "        * strategy 속성은 private으로 정의한다. executeStrategy()에서만 사용한다.\n"
+    "        * strategy 속성은 private으로 정의한다. executeStrategy()에서만 사용한다.\n",
+    "\n",
+    "* 영화의 예:\n",
+    "    * Context는 Ticket Box의 판매직원, 관람객이 내는 카드 또는 멤버쉽에 따라 맞는 할인율을 적용한다.\n",
+    "    * Strategy1은 영화관람객이 가져온 카드의 할인정책을 말한다."
    ]
   },
   {
@@ -155,8 +158,8 @@
     "    +execute()\n",
     "}\n",
     "Context -right-> Strategy\n",
-    "Strategy <|.. Strategy1\n",
-    "Strategy <|.. Strategy2\n",
+    "Strategy <|.. Strategy_1\n",
+    "Strategy <|.. Strategy_n\n",
     "@enduml"
    ]
   },
@@ -251,10 +254,10 @@
     }
    },
    "source": [
-    "* '상속'을 사용하여, 식사하는 방법을 구현한다.\n",
+    "* '상속'을 사용하여, 식사하는 방법 eat()을 구현한다.\n",
     "    * 다른 알고리즘을 구현할 수 있었지만, 새로운 문제가 있다.\n",
-    "    * 'Me'가 항상 'eatOutAlone()' 하지 않을 수 있다.\n",
-    "    * 'You'가 항상 'eatTogether()'하지 않는 않을 수 있다."
+    "    * 'Me'가 항상 'eatOutAlone' 하지 않을 수 있다.\n",
+    "    * 'You'가 항상 'eatTogether'하지 않는 않을 수 있다."
    ]
   },
   {
@@ -290,10 +293,10 @@
     "    +eat()\n",
     "}\n",
     "class Me {\n",
-    "    +eatOutAlone()\n",
+    "    +eat()\n",
     "}\n",
     "class You {\n",
-    "    +eatTogether()\n",
+    "    +eat()\n",
     "}\n",
     "IEat <|.. Me\n",
     "IEat <|.. You\n",
@@ -1695,19 +1698,20 @@
     }
    },
    "source": [
-    "## S-1 java.util.Comparator를 이용해 구현\n",
-    "\n",
-    "* 1-2는 보고서로 제출\n",
+    "## 문제 S-1: java.util.Comparator를 이용해 구현\n",
     "\n",
     "### 1-1 클래스다이어그램을 그리기\n",
-    "* plantuml로 그려서 script를 model에 저장\n",
+    "\n",
+    "* plantuml script를 model에 저장\n",
     "* DateComparator, ReverseComparator를 포함\n",
     "\n",
     "### 1-2  SOLID원칙이 어떻게 적용되었는지 설명\n",
     "\n",
-    "* 원칙이 적용된 부분을 설명\n",
+    "* 어떤 원칙이 적용되었는지 설명\n",
+    "* doc/에 저장\n",
     "\n",
     "### 1-3  구현\n",
+    "\n",
     "* 거북이를 정렬하는 TurtleComparator를 구현\n",
     "* 일자를 정렬하는 DataComparator를 구현\n",
     "* 문자를 역정렬하는 ReverseComparator를 구현\n",
