--- a/2_strategy.ipynb
+++ b/2_strategy.ipynb
@@ -91,8 +91,8 @@
     "클래스 | 설명\n",
     "-----|-----\n",
     "Context | 적용할 Strategy를 결정. 속성으로 사용할 Strategy를 가진다.\n",
-    "Strategy | 런타임에 사용하는 Strategy로서 구현은 하위 Strategy$_n$에 위임한다.\n",
-    "Strategy1 | 실행시점에 적용하는 Strategy를 가진다.\n",
+    "Strategy | 컴파일시점에 사용하는 Strategy로서 구현은 하위 Strategy$_n$에 위임한다.\n",
+    "Strategy$_n$ | 실행시점에 적용하는 Strategy를 가진다.\n",
     "\n",
     "* 서로 다른 알고리즘을 실행시점에 적용하기 위해:\n",
     "    * 상속을 사용하여, 다른 알고리즘을 하위 클래스에게 위임한다.\n",
@@ -104,7 +104,8 @@
     "\n",
     "* 영화의 예:\n",
     "    * Context는 Ticket Box의 판매직원, 관람객이 내는 카드 또는 멤버쉽에 따라 맞는 할인율을 적용한다.\n",
-    "    * Strategy1은 영화관람객이 가져온 카드의 할인정책을 말한다."
+    "    * Strategy는 어떤 카드 (Strategy$_n$)가 사용될지 모르지만, 할인을 적용해야 한다고 알고 있다.\n",
+    "    * Strategy$_n$은 영화관람객이 가져온 카드의 할인정책을 말한다."
    ]
   },
   {
@@ -512,6 +513,7 @@
    "execution_count": 5,
    "metadata": {
     "collapsed": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -557,6 +559,21 @@
     "end note\n",
     "\n",
     "@enduml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ModelDuck의 생성자에서 생성한 FlyBehavior를 사용하고 있다.\n",
+    "```\n",
+    "flyBehavior = new FlyNoWay();\n",
+    "```\n",
+    "\n",
+    "* 또한 set함수를 통해 FlyBehavior를 수정하고 있다.\n",
+    "```\n",
+    "model.setFlyBehavior(new FlyRocketPowered());\n",
+    "```"
    ]
   },
   {
