--- a/3_observer.ipynb
+++ b/3_observer.ipynb
@@ -2,19 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Observer 패턴\n",
     "\n",
     "## O.1 소개\n",
     "\n",
     "* Observer 패턴은 Behavioral Design Pattern\n",
-    "* 알람을 설정해 놓고, 시간이 되면 알려주는 경우\n",
-    "\n",
+    "* 새로운 뉴스가 발생했다고 하면:\n",
+    "    * 구독자가 뉴스 사이트를 방문해서 확인해야 하는 경우는 매우 번거롭다.\n",
+    "    * 반면에 새로운 뉴스가 발생하면, 구독자에게 알려주는 경우는 편리하다.\n",
+    "* 호텔의 wake-up 알람 서비스의 경우:\n",
+    "    * 아침 깨워야 할 시간이 오면, 투숙객에게 wake-up call\n",
+    "    * 일어날 시간이 되었는지 깼다 잤다를 반복하는 것은 참기 힘들다.\n",
+    "* 전화번호를 보기 위해 마우스로 화면의 버튼을 누르는 경우:\n",
+    "    * 버튼을 눌렀는지, 계속 확인해야 하는 경우는 프로세서가 바쁘게 된다.\n",
+    "    * 버튼이 클릭된 경우 알려주면 편리하다.\n",
+    "* 'poll'은 그 서비스가 필요한 사용자가 지속적으로 문의를 해야 하는 것이고, 반대를 push라고 한다.\n",
+    "* Observer 패턴은 'push'를 사용하며 절차는:\n",
+    "    * 미리 사용자를 등록한다.\n",
+    "    * 등록된 사용자에게 알려준다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* 디자인패턴 요소\n",
     "\n",
     "요소 | 설명\n",
@@ -22,11 +35,22 @@
     "name | Observer\n",
     "problem | 1:n관계에서의 정보 갱신\n",
     "solution | 정보사용자를 등록하고, 정보가 변동하는 경우 알려줌.\n",
-    "consequence | loose coupling, 확장성\n",
-    "\n",
-    "* 사례\n",
-    "    * 'Weather' (HFDP Ch2)\n",
-    "    * Turtle - 아기거북이가 어디로 가면, 엄마거북이가 다른 곳에 있더라도 쫓아 간다.\n"
+    "consequence | loose coupling, 확장성"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* 프로그래밍 예례\n",
+    "    * 날씨 알려주기 ('Weather', HFDP Ch2)\n",
+    "    * 과제\n",
+    "        * 날씨를 알려주기\n",
+    "        * Turtle - 아기거북이가 어디로 가면, 엄마거북이가 다른 곳에 있더라도 쫓아 간다."
    ]
   },
   {
@@ -39,8 +63,8 @@
    "source": [
     "## O.2 문제\n",
     "\n",
-    "* 누군가에 대해(정보공급자) 알고 싶어하는 다수의 사용자가 존재. 1:n 관계.\n",
-    "* 그 사용자가 늘어날수록, 알려주는 문제\n",
+    "* 정보공급자에 대해(정보공급자) 알고 싶어하는 다수의 사용자가 존재. 1:n 관계.\n",
+    "* 정보 사용자가 늘어날수록, 알려주는 문제\n",
     "* 확장성 문제\n",
     "    * 사용자를 추가하거나, 해제하는 문제\n",
     "    * 정보를 갱신하는 방법이 바뀌면, 사용자에게 알려주는 방법도 변경되어야 한다.\n",
