--- a/3_observer.ipynb
+++ b/3_observer.ipynb
@@ -221,7 +221,156 @@
    "source": [
     "## O.4 사례\n",
     "\n",
-    "### O.4.1 날씨\n",
+    "### O.4.1 면적 계산\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg height=\"266px\" style=\"width:279px;height:266px;\" version=\"1.1\" viewBox=\"0 0 279 266\" width=\"279px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs><filter height=\"300%\" id=\"f1\" width=\"300%\" x=\"-1\" y=\"-1\"><feGaussianBlur result=\"blurOut\" stdDeviation=\"2.0\"/><feColorMatrix in=\"blurOut\" result=\"blurOut2\" type=\"matrix\" values=\"0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 .4 0\"/><feOffset dx=\"4.0\" dy=\"4.0\" in=\"blurOut2\" result=\"blurOut3\"/><feBlend in=\"SourceGraphic\" in2=\"blurOut3\" mode=\"normal\"/></filter></defs><g><polygon fill=\"#FFFFFF\" filter=\"url(#f1)\" points=\"72,24,138,24,145,46.2969,222,46.2969,222,123,72,123,72,24\" style=\"stroke: #000000; stroke-width: 2.0;\"/><line style=\"stroke: #000000; stroke-width: 2.0;\" x1=\"72\" x2=\"145\" y1=\"46.2969\" y2=\"46.2969\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"60\" x=\"76\" y=\"38.9951\">java.util</text><polygon fill=\"#FFFFFF\" filter=\"url(#f1)\" points=\"22,147,143,147,150,169.2969,272,169.2969,272,259,22,259,22,147\" style=\"stroke: #000000; stroke-width: 2.0;\"/><line style=\"stroke: #000000; stroke-width: 2.0;\" x1=\"22\" x2=\"150\" y1=\"169.2969\" y2=\"169.2969\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"115\" x=\"26\" y=\"161.9951\">java.awt.event</text><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"48\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"117\" x=\"88.5\" y=\"59\"/><ellipse cx=\"103.5\" cy=\"75\" fill=\"#B4A7E5\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M99.4219,70.7656 L99.4219,68.6094 L106.8125,68.6094 L106.8125,70.7656 L104.3438,70.7656 L104.3438,78.8438 L106.8125,78.8438 L106.8125,81 L99.4219,81 L99.4219,78.8438 L101.8906,78.8438 L101.8906,70.7656 L99.4219,70.7656 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" font-style=\"italic\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"85\" x=\"117.5\" y=\"79.1543\">EventListener</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"89.5\" x2=\"204.5\" y1=\"91\" y2=\"91\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"89.5\" x2=\"204.5\" y1=\"99\" y2=\"99\"/><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"60.8047\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"217\" x=\"38.5\" y=\"182\"/><ellipse cx=\"98.25\" cy=\"198\" fill=\"#B4A7E5\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M94.1719,193.7656 L94.1719,191.6094 L101.5625,191.6094 L101.5625,193.7656 L99.0938,193.7656 L99.0938,201.8438 L101.5625,201.8438 L101.5625,204 L94.1719,204 L94.1719,201.8438 L96.6406,201.8438 L96.6406,193.7656 L94.1719,193.7656 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" font-style=\"italic\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"89\" x=\"118.75\" y=\"202.1543\">ActionListener</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"39.5\" x2=\"254.5\" y1=\"214\" y2=\"214\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"39.5\" x2=\"254.5\" y1=\"222\" y2=\"222\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"205\" x=\"44.5\" y=\"236.2104\">actionPerformed(e:ActionEvent):void</text><path d=\"M147,127.34 C147,145.286 147,165.643 147,181.8407 \" fill=\"none\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><polygon fill=\"none\" points=\"140,127.089,147,107.089,154,127.089,140,127.089\" style=\"stroke: #A80036; stroke-width: 1.0;\"/></g></svg>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.SVG object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%plantuml\n",
+    "@startuml\n",
+    "\n",
+    "interface java.util.EventListener\n",
+    "interface java.awt.event.ActionListener {\n",
+    "    actionPerformed(e:ActionEvent):void\n",
+    "}\n",
+    "java.util.EventListener <|-- java.awt.event.ActionListener\n",
+    "@enduml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# %load src/com/sd/gui/CalcAreaGUIMain.java\n",
+    "/*\n",
+    " * @author jsl\n",
+    " * @version 20161208\n",
+    " * Problems: can not access to JTextFields from CalcAreaListener\n",
+    " */\n",
+    "package com.sd.gui;\n",
+    "import java.awt.*;\n",
+    "import javax.swing.*;\n",
+    "\n",
+    "public class CalcAreaGUIMain {\n",
+    "    public static void main(String[] args) {\n",
+    "        JFrame f=new JFrame();\n",
+    "        JPanel panel=new JPanel(new GridLayout(3,2));\n",
+    "        f.getContentPane().add(panel);\n",
+    "        JLabel label1=new JLabel(\"반지름\");\n",
+    "        JLabel label2=new JLabel(\"면적\");\n",
+    "        JTextField radiusTf1=new JTextField(20);\n",
+    "        JTextField areaTf2=new JTextField(20);\n",
+    "        JButton b1=new JButton(\"계산\");\n",
+    "        JButton b2=new JButton(\"취소\");\n",
+    "        //b1.setPreferredSize(new Dimension(40, 40));\n",
+    "        b1.addActionListener(new CalcAreaListener());\n",
+    "        b2.addActionListener(new CalcAreaListener());\n",
+    "        panel.add(label1);\n",
+    "        panel.add(radiusTf1);\n",
+    "        panel.add(label2);\n",
+    "        panel.add(areaTf2);\n",
+    "        panel.add(b1);\n",
+    "        panel.add(b2);\n",
+    "        //f.setDefaultCloseOperation(EXIT_ON_CLOSE);\n",
+    "        f.pack();\n",
+    "        f.setVisible(true);\n",
+    "    }   \n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# %load src/com/sd/gui/CalcAreaListener.java\n",
+    "/*\n",
+    " * @author jsl\n",
+    " * @version 20161208\n",
+    " */\n",
+    "package com.sd.gui;\n",
+    "import java.awt.event.*;\n",
+    "import javax.swing.*;\n",
+    "\n",
+    "// CalcListener can not access to JTextFields\n",
+    "class CalcAreaListener implements ActionListener {\n",
+    "    public void actionPerformed(ActionEvent e) {\n",
+    "        JButton b=(JButton)e.getSource();\n",
+    "        String cmd=e.getActionCommand();\n",
+    "        if (cmd.equals(\"계산\")) {\n",
+    "            System.out.println(\"계산 버튼\");\n",
+    "            b.setText(\"계산했습니다\");\n",
+    "        } else if (cmd.equals(\"취소\")) {\n",
+    "            System.out.println(\"취소 버튼\");\n",
+    "            b.setText(\"취소했습니다\");\n",
+    "        } else {\n",
+    "            System.out.println(\"버튼을 '..했습니다'로 변경하면 cmd도 변경된다.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!javac -d classes/ -sourcepath src src/com/sd/gui/CalcAreaGUIMain.java\n",
+    "!java -cp classes/ com.sd.gui.CalcAreaGUIMain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### O.4.2 날씨\n",
     "\n",
     "* 객체에서 나누어지는 서로 다른 기능이 있는 경우, 인터페이스로 분리\n",
     "* 교재 HFDP Ch2 'Weather'\n",
@@ -689,9 +838,9 @@
     }
    },
    "source": [
-    "### O.4.2 거북이\n",
+    "### O.4.3 거북이\n",
     "\n",
-    "#### O.4.2.1 아기 거북이 지켜보기\n",
+    "#### O.4.3.1 아기 거북이 지켜보기\n",
     "\n",
     "* 내용\n",
     "    * 아기거북이가 여기 저기 다닌다.\n",
@@ -829,7 +978,7 @@
     }
    },
    "source": [
-    "#### O.4.2.2 거북이 키/마우스로 움직이기\n",
+    "#### O.4.3.2 거북이 키/마우스로 움직이기\n",
     "\n",
     "* 키보드/ 마우스에 이벤트가 발생하면 거북이를 움직인다.\n",
     "* Observer패턴을 사용한다.\n",
