--- a/2_strategy.ipynb
+++ b/2_strategy.ipynb
@@ -257,8 +257,9 @@
    "source": [
     "* '상속'을 사용하여, 식사하는 방법 eat()을 구현한다.\n",
     "    * 다른 알고리즘을 구현할 수 있었지만, 새로운 문제가 있다.\n",
-    "    * 'Me'가 항상 'eatOutAlone' 하지 않을 수 있다.\n",
-    "    * 'You'가 항상 'eatTogether'하지 않는 않을 수 있다."
+    "    * 하위 클래스가 eat()을 정할 수 있지만, context switch를 할 수 없다. \n",
+    "        * 'Me'가 항상 'eatOutAlone' 하지 않을 수 있다.\n",
+    "        * 'You'가 항상 'eatTogether'하지 않는 않을 수 있다."
    ]
   },
   {
@@ -268,7 +269,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -322,7 +323,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -383,8 +384,8 @@
     }
    },
    "source": [
-    "* 상속으로 문제를 해결?\n",
-    "    * 다른 문제가 발생한다.\n",
+    "* 상속을 사용하지만, 잘 못 사용하게 되면 문제를 해결하지 못한다.\n",
+    "    * context switch를 할 수 없다.\n",
     "    * LSP원칙에 따라, RubberDuck도 quack해야 함. 행동을 다른 Duck과 동일하게 해야 함. "
    ]
   },
@@ -448,7 +449,7 @@
     }
    },
    "source": [
-    "* Strategy 패턴\n",
+    "* Strategy 패턴을 적용하여 문제를 해결한다.\n",
     "    * 인터페이스를 분리, 구현\n",
     "    * Duck은 인터페이스 QuackBeahvior, FlyBeahvior를 사용한다고 결정한다.\n",
     "    * 이러한 인터페이스는 supertype를 사용하는 것이다.\n",
@@ -1176,6 +1177,7 @@
     }
    ],
    "source": [
+    "import java.util.Arrays;\n",
     "Integer[] num=new Integer[] {5,3,4,2,1};\n",
     "Arrays.sort(num);\n",
     "for(int i=0;i<num.length;i++)\n",
@@ -1214,7 +1216,7 @@
    ],
    "source": [
     "String[] s={\"John\", \"Adam\", \"Skrien\", \"Smith\", \"Jones\"};\n",
-    "Arrays.sort(s)\n",
+    "Arrays.sort(s);\n",
     "for(int i=0;i<s.length;i++)\n",
     "    System.out.println(s[i]);"
    ]
@@ -1271,13 +1273,16 @@
     }
    ],
    "source": [
+    "import java.util.Collections;\n",
+    "import java.util.List;\n",
+    "import java.util.ArrayList;\n",
     "List<Integer> num=new ArrayList<Integer>();\n",
-    "num.add(7)\n",
-    "num.add(6)\n",
-    "num.add(9)\n",
-    "num.add(8)\n",
-    "num.add(5)\n",
-    "Collections.sort(num)\n",
+    "num.add(7);\n",
+    "num.add(6);\n",
+    "num.add(9);\n",
+    "num.add(8);\n",
+    "num.add(5);\n",
+    "Collections.sort(num);\n",
     "for(int i=0;i<num.size();i++)\n",
     "    System.out.println(num.get(i));"
    ]
