--- a/3_observer.ipynb
+++ b/3_observer.ipynb
@@ -119,7 +119,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -353,7 +353,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -397,7 +397,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -537,7 +537,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -808,7 +808,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [
