--- a/2_strategy.ipynb
+++ b/2_strategy.ipynb
@@ -905,7 +905,7 @@
     "-----|-----\n",
     "v0 | 정렬 알고리즘이 중복. 정수, 문자에 따라 비교 방식만 다르고 나머지 중복 \n",
     "v1 | Comparable. Template 패턴 적용.\n",
-    "v2 | Compararator. Strategy 패턴 적용."
+    "v2 | Comparator. Strategy 패턴 적용."
    ]
   },
   {
